2007-04-11  Katsutoshi Itoh <cut-sea@kahua.org>

	* Add "HTTP_COOKIE" into *metavariables* at cgi/kahua.cgi.in.
	* Add kahua-cookie-ref procedure.
	* Add document of kahua-cookie-ref.
	
2007-03-17  Katsutoshi Itoh <cut-sea@kahua.org>

	* Fix: src/kahua-package.scm
	  Modify help message.
	
2007-03-16  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: emacs/kahua.el.in
	  Add more keywords.

2007-03-07  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: emacs/kahua.el.in
	  Add font lock face customization and indentation.

2007-02-21  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/persistence/dbi.scm
	  Fix misused pass-through symbol instead of :pass-through keyword.

2007-02-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/server.scm
	  Add "with-validation" as a declarative validation syntax.
	  It's very experimental.

	* Merged from stable1_0 branch(tagged MERGED_TO_HEAD_20070215).

2007-02-14  Tatsuya BIZENN  <bizenn@arthub.net>

	* Drop: doc/hello-kahua.ja
	  Because it's obsolete.

2007-02-05  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-server.scm
	  After reload kahua application module, invoke kahua-db-purge-objs.

2007-02-04  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: skel/INSTALL, skel/Makefile.in, skel/configure.ac,
	          skel/proj/version.kahua.in, skel/test/test.scm.in,
	          src/kahua-package.scm
	* Drop: skel/proj-start.in, skel/proj-stop.in, skel/proj.conf.in
	  Arrange code and simplify them.  Now drop start/stop scripts
	  and in-place execution.

2007-02-03  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: skel/Makefile.in
	  Now clean up properly, and fix some other bugs.

2007-02-02  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-spvr.scm, src/kahua/developer.scm,
	       src/kahua/persistence.scm, src/kahua/persistence/efs.scm,
	       src/kahua/persistence/dbi.scm
	  Avoid "Unknown keyword WARNING" when work with recent Gauche
	  CVS HEAD version.  But this fix is very transitional, and